# GenTorch

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  seed_seq_test.cpp
.github/workflows/: docs.yml  test.yml
apps/: scrap.cpp
custom_node/: CMakeLists.txt  custom_node.cpp
distributions/: normal.h
dml/: dml.h
docs/: CMakeLists.txt  design_notes.md  mainpage.md
examples/: CMakeLists.txt  README.md  eigen.cpp  importance_sampling.cpp  mcmc.cpp  particle_filter.cpp  particle_filter_plot.py  scrap.cpp  sgd.cpp  simple_monte_carlo.cpp
examples/python/: bindings.cpp  build.sh  model.cpp  model.h  test.py
gen-comparison/: Manifest.toml  Project.toml  simple.jl
include/: randutils.h
include/gentorch/: address.h  conversions.h  parameters.h  trace.h  trie.h
include/gentorch/distributions/: bernoulli.h  distributions.h  normal.h  uniform_continuous.h
include/gentorch/dml/: assess.h  autodiff.h  choice_gradient.h  dml.h  gen_fn.h  generate.h  parameter_gradient.h  simulate.h  trace.h  update.h
interfaces/: address.h  trace.h  trie.h
multithreaded_sgd_sandbox/: CMakeLists.txt  multithreading.cpp  test_multithreaded_sgd.cpp
sml-jit-sandbox/: AddressSchema.cpp  AddressSchema.h  ChoiceDict.cpp  ChoiceDict.h  Interface.h  Normal.cpp  Normal.h  build.sh  sml.cpp  tmp.cpp
src/: CMakeLists.txt  address.cpp  conversions.cpp  dml.cpp  module.cpp  normal.cpp  parameters.cpp  sml  sml.cpp  trie.cpp  update.cpp
src/distributions/: bernoulli.cpp  normal.cpp  uniform_continuous.cpp
src/dml/: update.cpp
test/: test_address.cpp  test_dml.cpp
tests/: CMakeLists.txt  gtest_example.cpp  test_address.cpp  test_conversions.cpp  test_dml.cpp  test_mcmc.cpp  test_parameters.cpp  test_particle_filter.cpp  test_seed_sequence.cpp  test_sgd.cpp  test_trie.cpp  test_update.cpp  testlib.cpp
tests/dml/: update.cpp
